force-app/main/default/objects/Content__c/Content__c.object-meta.xml
<CustomObject>
    <label>BT Content</label>
    <nameField>
        <label>Content Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BT Contents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>