force-app/main/default/objects/Content__c/fields/Admin_Interface_Node_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Admin_Interface_Node_Configuration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Admin Interface Node Configuration</label>
    <referenceTo>Admin_Interface_Node_Configuration__c</referenceTo>
    <relationshipName>Contents</relationshipName>
    <type>Lookup</type>
</CustomField>