force-app/main/default/objects/Content__c/fields/Video_URL__c.field-meta.xml
<CustomField>
    <fullName>Video_URL__c</fullName>
    <label>Video_URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>